syntax = "proto3";
package post;
option go_package = "./";

import "google/protobuf/timestamp.proto";
service PostService{
  rpc GetAll(GetAllRequest) returns (Posts){}
  rpc GetByID(GetByIdRequest) returns (Post){}
  rpc Update(UpdateRequest) returns (UpdateResponse){}
  rpc DeleteByID(DeleteByIdRequest) returns (DeleteByIDResponse){}
  rpc Create(CreateRequest) returns (CreateResponse){}
}

// request
message GetAllRequest{}
message GetByIdRequest{
  string UUID = 1;
}
message UpdateRequest{
  string UUID = 1;
  string Title = 2;
  string Content = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}
message DeleteByIdRequest{
  string UUID = 1;
}
message CreateRequest{
  string UUID = 1;
  string Title = 2;
  string Content = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// response
message Post{
  string UUID = 1;
  string Title = 2;
  string Content = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}
message Posts{
  repeated Post Posts = 1;
}
message CreateResponse{
  string UUID = 1;
}
message UpdateResponse{
  string UUID = 1;
}
message DeleteByIDResponse{
  string UUID = 1;
}